Add Google site verification to index.html
Added Google site verification meta tag.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Saytni barcha qurilmalarga (mobil, planshet, kompyuter) moslashtiradi -->
   <title>TopMaxsulotMarket</title> <!-- Brauzer oynasida chiqadigan sarlavha -->
   <link rel="stylesheet" href="index.css"> <!-- Tashqi CSS faylni ulamoqda -->
+  google-site-verification: google979aaa67f511ca30.html
 </head>
 
 <body>
@@ -187,3 +188,4 @@
   </footer>
 </body>
 </html>
+
