Add Google site verification meta tag
Added Google site verification meta tag to the head section.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Saytni barcha qurilmalarga (mobil, planshet, kompyuter) moslashtiradi -->
   <title>TopMaxsulotMarket</title> <!-- Brauzer oynasida chiqadigan sarlavha -->
   <link rel="stylesheet" href="index.css"> <!-- Tashqi CSS faylni ulamoqda -->
-  
+  <meta name="google-site-verification" content="FnYRS6mRaeVoYVWcw9hDtrXsYhYawLlp562dtzyA3Wc" />
 </head>
 
 <body>
@@ -188,5 +188,6 @@
   </footer>
 </body>
 </html>
+
 
 
