--- a/katalog.html
+++ b/katalog.html
@@ -51,7 +51,7 @@
             <li><a href="telefon.html">Telefonlar</a></li>
             <li><a href="noutbook.html">Noutbuklar</a></li>
             <li><a href="planshetlar.html">Planshetlar</a></li>
-            <li><a href="soatlar.html">Smart soatlar</a></li>
+            <li><a href="smartwatch.html">Smart soatlar</a></li>
             <li><a href="televizorlar.html">Televizorlar</a></li>
             <li><a href="aksessuar.html">Aksessuarlar</a></li>
           </ul>
@@ -314,11 +314,11 @@
 
         <!-- 22. Quvvat banki -->
         <div class="product-card">
-          <img src="https://encrypted-tbn2.gstatic.com/shopping?q=tbn:ANd9GcQBDiK_lNZUv2hByeBaiVMYPyyCMCrZ5yiaP_JrMeiEI79Dn0f12-8DY6SOMcZzTamZyCtRhLKdHaLgWnqGJbgVzK-cZhbrPtukByddRsjTn6NQMGeac1lp06lobR15KEHeJORh6w&usqp=CAc" alt="Powerbank">
+          <img src="https://encrypted-tbn3.gstatic.com/shopping?q=tbn:ANd9GcQxlqkozXlTnJX0enrvHZxQxHioquomQrrPbmrWrIl5p9bdwEI4eVZdyN_AaRMZRdqkWS9rg997byLruFwKNQVJUtqSwGtmXV6AH0lmEt00swayiCuA6m8xs_qJ7X1x_1d63JZx-Ec&usqp=CAc" alt="Powerbank">
           <h3>Xiaomi Power Bank 20000mAh</h3>
           <p class="desc">Ikki USB chiqishli kuchli quvvat banki</p>
           <p class="price">290 000 so‘m</p>
-          <button class="add-to-cart btn" data-id="22" data-title="Xiaomi Power Bank 20000mAh" data-img="https://encrypted-tbn2.gstatic.com/shopping?q=tbn:ANd9GcQBDiK_lNZUv2hByeBaiVMYPyyCMCrZ5yiaP_JrMeiEI79Dn0f12-8DY6SOMcZzTamZyCtRhLKdHaLgWnqGJbgVzK-cZhbrPtukByddRsjTn6NQMGeac1lp06lobR15KEHeJORh6w&usqp=CAc" data-price="290000">Savatga qo‘shish</button>
+          <button class="add-to-cart btn" data-id="22" data-title="Xiaomi Power Bank 20000mAh" data-img="https://encrypted-tbn3.gstatic.com/shopping?q=tbn:ANd9GcQxlqkozXlTnJX0enrvHZxQxHioquomQrrPbmrWrIl5p9bdwEI4eVZdyN_AaRMZRdqkWS9rg997byLruFwKNQVJUtqSwGtmXV6AH0lmEt00swayiCuA6m8xs_qJ7X1x_1d63JZx-Ec&usqp=CAc=CAc" data-price="290000">Savatga qo‘shish</button>
         </div>
 
         <!-- 23. Sutli shokolad -->
