--- a/smartwatch.html
+++ b/smartwatch.html
@@ -186,5 +186,65 @@
     </div>
 
   </div> <!-- Wrapper tugadi -->
+
+  <!-- === SAVATGA QO‘SHISH FUNKSIYASI === -->
+  <script>
+  let cart = JSON.parse(localStorage.getItem('cart_v1')) || []; 
+  // localStorage'dan saqlangan savatni oladi (agar yo‘q bo‘lsa — bo‘sh massiv yaratadi)
+
+  // Har bir “Savatga qo‘shish” tugmasiga bosilganda ishlaydi
+  document.querySelectorAll('.add-to-cart').forEach(btn=>{
+    btn.addEventListener('click', function(e){
+      e.preventDefault(); // Sahifa qayta yuklanmasin
+
+      const item = { // Yangi mahsulot obyektini tuzadi
+        id: this.dataset.id,
+        title: this.dataset.title,
+        img: this.dataset.img,
+        price: Number(this.dataset.price),
+        qty: 1 // boshlang‘ich miqdor
+      };
+
+      // Agar mahsulot avvaldan savatda bo‘lsa — sonini oshiradi
+      let exist = cart.find(p => p.id === item.id);
+      if (exist) {
+        exist.qty++;
+      } else {
+        cart.push(item);
+      }
+
+      // Yangilangan savatni localStorage'ga yozadi
+      localStorage.setItem('cart_v1', JSON.stringify(cart));
+      
+      alert("✅ Mahsulot savatga qo'shildi!"); // Foydalanuvchiga xabar beradi
+      window.location.href = "savat.html"; // Savat sahifasiga o'tadi
+    });
+  });
+  </script>
+
+
+  <!--  === PASTKI O‘NG BURCHAKDA TELEGRAM VA INSTAGRAM IKONKALARI === -->
+    <!-- === HTML QISMI === -->
+  <div class="social-float">
+  <!--  Telegram tugmasi -->
+  <a class="sf-btn telegram" href="https://t.me/topmaxsulotmarket" target="_blank" rel="noopener noreferrer">
+    <!-- Telegram SVG ikonkasi -->
+    <svg viewBox="0 0 240 240" xmlns="http://www.w3.org/2000/svg">
+      <path d="M120 0C53.7 0 0 53.7 0 120s53.7 120 120 120 120-53.7 120-120S186.3 0 120 0zm55.3 78.9l-18.7 88.4c-1.4 6.3-5.1 7.8-10.3 4.9l-28.5-21.1-13.7 13.2c-1.5 1.5-2.8 2.8-5.7 2.8l2-28.5 51.9-46.9c2.2-2 0.3-3.1-3.4-1.1L83.2 129.6 55.6 116.7c-6.1-2.2-6.2-6.1 1.3-9.1l98.4-37.9c4.6-1.7 8.6 1.1 6.4 9.2z"/>
+    </svg>
+    <span class="tooltip">Telegram</span> <!-- Ustiga olib borganda "Telegram" yozuvi chiqadi -->
+  </a>
+
+  <!--  Instagram tugmasi -->
+  <a class="sf-btn instagram" href="https://instagram.com/yourusername" target="_blank" rel="noopener noreferrer">
+    <!-- Instagram SVG ikonkasi -->
+    <svg viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
+      <path d="M349.33 69.33H162.67C109.05 69.33 64 114.38 64 168v181.33C64 397.62 109.05 442.67 162.67 442.67h186.67C402.95 442.67 448 397.62 448 349.33V168c0-53.62-45.05-98.67-98.67-98.67zM256 346.67c-50.24 0-90.67-40.43-90.67-90.67S205.76 165.33 256 165.33 346.67 205.76 346.67 256 306.24 346.67 256 346.67zm101.33-176c-11.78 0-21.33-9.55-21.33-21.33s9.55-21.33 21.33-21.33 21.33 9.55 21.33 21.33-9.55 21.33-21.33 21.33zM384 349.33c0 36.72-29.79 66.67-66.67 66.67H194.67c-36.88 0-66.67-29.95-66.67-66.67V168c0-36.88 29.79-66.67 66.67-66.67h122.67C354.21 101.33 384 131.12 384 168v181.33z"/>
+    </svg>
+    <span class="tooltip">Instagram</span> <!-- Ustiga olib borganda "Instagram" yozuvi chiqadi -->
+  </a>
+  </div>
+
 </body>
 </html>
+
