--- a/katalog.html
+++ b/katalog.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Mobil qurilmalarda moslashuv -->
   <title>Katalog - TopMaxsulotMarket</title> <!-- Sahifa sarlavhasi (brauzer tepasida chiqadi) -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <link rel="icon" type="image/png" href="favicon.png">
 
   <!-- CSS faylni ulash -->
   <link rel="stylesheet" href="katalog.css">
@@ -446,3 +447,4 @@ document.querySelectorAll('.add-to-cart').forEach(btn=>{
 </script>
 </body>
 </html>
+
