--- a/noutbook.html
+++ b/noutbook.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Noutbuklar</title>
   <link rel="stylesheet" href="noutbook.css">
+  <link rel="icon" type="image/png" href="favicon.png">
 </head>
 <body>
   <!-- HEADER -->
@@ -138,3 +139,4 @@ document.querySelectorAll('.add-to-cart').forEach(btn=>{
 </script>
 </body>
 </html>
+
