--- a/planshetlar.html
+++ b/planshetlar.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Planshetlar</title>
   <link rel="stylesheet" href="planshetlar.css">
+  <link rel="icon" type="image/png" href="favicon.png">
 </head>
 <body>
   <!-- HEADER -->
@@ -193,3 +194,4 @@ document.querySelectorAll('.add-to-cart').forEach(btn=>{
 </script>
   </body>
 </html>
+
