--- a/register.html
+++ b/register.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ro‘yxatdan o‘tish - TopMaxsulotMarket</title>
   <link rel="stylesheet" href="index.css">
+  <link rel="icon" type="image/png" href="favicon.png">
 </head>
 <body>
   <header>
@@ -38,3 +39,4 @@
 
 </body>
 </html>
+
