--- a/savat.html
+++ b/savat.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Savat - TopMaxsulotMarket</title>
+  <link rel="icon" type="image/png" href="favicon.png">
 
   <!-- Tashqi CSS fayl (umumiy uslublar uchun) -->
   <link rel="stylesheet" href="savat.css">
@@ -250,3 +251,4 @@
   </footer>
 </body>
 </html>
+
