--- a/smartwatch.html
+++ b/smartwatch.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Mobil moslashuv -->
   <title>Smart Soatlar</title> <!-- Sahifa nomi -->
   <link rel="stylesheet" href="smartwatch.css"> <!-- Tashqi CSS fayl ulanishi -->
+  <link rel="icon" type="image/png" href="favicon.png">
 </head>
 
 <body>
@@ -247,4 +248,5 @@
 
 </body>
 </html>
+
 
