--- a/telefon.html
+++ b/telefon.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Telefonlar</title>
   <link rel="stylesheet" href="telefon.css">
+  <link rel="icon" type="image/png" href="favicon.png">
 </head>
 <body>
   <!-- HEADER -->
@@ -299,3 +300,4 @@ document.querySelectorAll('.add-to-cart').forEach(btn=>{
 </script>
 </body>
 </html>
+
