--- a/savat.html
+++ b/savat.html
@@ -47,14 +47,7 @@
         <div class="flex justify-between text-sm text-gray-600"><span>Yetkazib berish</span><span id="shipping-text">—</span></div>
         <div class="flex justify-between text-base font-semibold"><span>Jami</span><span id="subtotal">0 so'm</span></div>
         
-        <div class="pt-4 border-t">
-          <label for="coupon" class="block text-sm text-gray-700">Promokod</label>
-          <div class="mt-2 flex gap-2">
-            <input id="coupon" type="text" placeholder="KOD" class="flex-1 px-3 py-2 rounded-lg border" />
-            <button id="apply-coupon" class="px-3 py-2 rounded-lg bg-indigo-600 text-white">Qo'llash</button>
-          </div>
-          <p id="coupon-msg" class="mt-2 text-sm hidden"></p>
-        </div>
+     
 
         <button id="checkout-btn" class="w-full mt-4 px-4 py-3 bg-emerald-600 text-white rounded-lg font-medium hover:bg-emerald-700">To'lovga o'tish</button>
         <button id="clear-cart" class="w-full mt-2 px-4 py-2 border rounded-lg text-sm text-red-600 hover:bg-red-100">Savatni tozalash</button>
@@ -71,8 +64,17 @@
         <label class="block mb-2 text-sm font-medium">Ismingiz</label>
         <input type="text" id="client-name" class="w-full border p-2 rounded mb-4" placeholder="Ismingizni kiriting" required>
 
-        <label class="block mb-2 text-sm font-medium">Telefon raqamingiz</label>
-        <input type="tel" id="client-phone" class="w-full border p-2 rounded mb-4" placeholder="+998 90 123 45 67" required>
+        <label class="block text-sm font-medium">Telefon raqamingiz:</label>
+      <input 
+    type="tel"
+    id="client-phone"
+    placeholder="+998 90 123 45 67"
+    maxlength="19"
+    class="w-full border p-2 rounded outline-none"
+    required
+    />
+        <small class="text-gray-500 text-xs">Faqat O‘zbek raqamlari qabul qilinadi</small>
+
 
         <label class="block mb-2 text-sm font-medium">Yetkazib berish manzili</label>
         <div class="mb-4">
