--- a/register.html
+++ b/register.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ro‘yxatdan o‘tish - TopMaxsulotMarket</title>
   <link rel="stylesheet" href="index.css">
-  <link rel="icon" type="image/png" href="favicon.png">
 </head>
 <body>
   <header>
@@ -24,19 +23,9 @@
       <input type="text" name="username" placeholder="Foydalanuvchi nomi" required>
       <input type="email" name="email" placeholder="Email" required>
       <input type="password" name="password" placeholder="Parol" required>
-      <button type="submit">Ro‘yxatdan o‘tish</button>
-      <p>Allaqachon hisobingiz bormi? <a href="login.html">Kirish</a></p>
+      <br><br><button type="submit">Ro‘yxatdan o‘tish</button>
+      <br><br><br><br><br><p>Allaqachon hisobingiz bormi? <a href="login.html">Kirish</a></p>
     </form>
   </div>
-  <br><br>
-  <!-- Footer -->
-  <footer>
-    <p>&copy; 2025 TopMaxsulotMarket. Barcha huquqlar himoyalangan.</p>
-  </footer>
 </body>
 </html>
-
-
-</body>
-</html>
-
