--- a/katalog.html
+++ b/katalog.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Mobil qurilmalarda moslashuv -->
   <title>Katalog - TopMaxsulotMarket</title> <!-- Sahifa sarlavhasi (brauzer tepasida chiqadi) -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-  <link rel="icon" type="image/png" href="favicon.png">
 
   <!-- CSS faylni ulash -->
   <link rel="stylesheet" href="katalog.css">
@@ -35,7 +34,25 @@
   </header>
   <!-- ================= HEADER TUGADI ================= -->
 
-
+ <!-- === MOBIL QURILMALAR UCHUN PASTKI NAVIGATSIYA === -->
+  <nav class="mobile-bottom-nav">
+    <a href="index.html" class="nav-link active">
+        <span class="nav-icon">🏠</span> 
+        <span class="nav-text">Bosh sahifa</span>
+    </a>
+    <a href="katalog.html" class="nav-link">
+        <span class="nav-icon">☰</span>
+        <span class="nav-text">Katalog</span>
+    </a>
+    <a href="savat.html" class="nav-link">
+        <span class="nav-icon">🛒</span>
+        <span class="nav-text">Savat</span>
+    </a>
+    <a href="login.html" class="nav-link">
+        <span class="nav-icon">👤</span>
+        <span class="nav-text">Kirish</span>
+    </a>
+  </nav>
 
   <!-- ================= ASOSIY QISM ================= -->
   <main class="main"> <!-- Bosh kontent joylashgan qism -->
@@ -135,11 +152,11 @@
 
         <!-- 2-mahsulot -->
         <div class="product-card">
-          <img src="https://web.openshop.uz/storage/uploads/products/photos/202403/QDRJiTmGRRxZUTSkW6twfjNRjcBGfehaTgW8Tstp.jpg" alt="Smart soat">
+          <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcRhHuzxa7NKMELPyPXud46-hTqpM5i22SjdmPQHnyczAPVPlhEJQZCF_LuDQMwBDwvjm--Mb_MzaAJNqHTvLXZtyxNZX-2RtASMIcZbjJrV4tndh73jdi4JQazbzPd91bgYjQ&usqp=CAc" alt="Smart soat">
           <h3>Apple Watch SE</h3>
           <p class="desc">Sog‘lig‘ingiz va mashg‘ulotlaringiz nazorat ostida</p>
           <p class="price">3 199 000 so‘m</p>
-          <button class="add-to-cart btn" data-id="2" data-title="Apple Watch SE" data-img="https://web.openshop.uz/storage/uploads/products/photos/202403/QDRJiTmGRRxZUTSkW6twfjNRjcBGfehaTgW8Tstp.jpg" data-price="3199000">Savatga qo‘shish</button>
+          <button class="add-to-cart btn" data-id="2" data-title="Apple Watch SE" data-img="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcRhHuzxa7NKMELPyPXud46-hTqpM5i22SjdmPQHnyczAPVPlhEJQZCF_LuDQMwBDwvjm--Mb_MzaAJNqHTvLXZtyxNZX-2RtASMIcZbjJrV4tndh73jdi4JQazbzPd91bgYjQ&usqp=CAc" data-price="3199000">Savatga qo‘shish</button>
         </div>
         <!-- 3. Smart soat -->
         <div class="product-card">
@@ -440,11 +457,18 @@ document.querySelectorAll('.add-to-cart').forEach(btn=>{
 
     localStorage.setItem('cart_v1', JSON.stringify(cart));
     
-    alert("✅ Noutbuk savatga qo'shildi!");
+    alert("✅ Maxsulot savatga qo'shildi!");
     window.location.href = "savat.html";
   });
 });
 </script>
+<!-- ================= SAVATGA QO'SHISH KODI TUGADI ================= -->
+
+  <!-- ================= TELEGRAM  IKONKASI  ================= -->
+<a href="https://t.me/topmaxsulotmarket" class="telegram-float" target="_blank">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="30" height="30" fill="white">
+      <path d="M11.944 0A12 12 0 0 0 0 12a12 12 0 0 0 12 12 12 12 0 0 0 12-12A12 12 0 0 0 11.944 0zm4.962 7.224c.1-.002.321.023.465.14a.506.506 0 0 1 .171.325c.016.093.036.306.02.472-.18 1.898-.962 6.502-1.36 8.627-.168.9-.499 1.201-.82 1.23-.696.065-1.225-.46-1.9-.902-1.056-.693-1.653-1.124-2.678-1.8-1.185-.78-.417-1.21.258-1.91.177-.184 3.247-2.977 3.307-3.23.007-.032.014-.15-.056-.212s-.174-.041-.249-.024c-.106.024-1.793 1.14-5.061 3.345-.48.33-.913.49-1.302.48-.428-.008-1.252-.241-1.865-.44-.752-.245-1.349-.374-1.297-.789.027-.216.325-.437.893-.663 3.498-1.524 5.83-2.529 6.998-3.014 3.332-1.386 4.025-1.627 4.476-1.635z"/>
+    </svg>
+  </a>
 </body>
 </html>
-
