--- a/login.html
+++ b/login.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Kirish - TopMaxsulotMarket</title>
   <link rel="stylesheet" href="index.css">
-  <link rel="icon" type="image/png" href="favicon.png">
 </head>
 <body>
   <header>
@@ -20,25 +19,23 @@
     </header>
   <div class="login-container">
     <h2>Foydalanuvchi kirishi</h2>
-    <form action="php/login.php" method="POST">
+    <form action="login.php" method="POST">
       <input type="text" name="username" placeholder="Foydalanuvchi nomi" required>
       <br>
       <br>    
       <input type="password" name="password" placeholder="Parol" required>
       <br>
       <br>
-      <br>
+      <br><br>
       <button type="submit">Kirish</button>
+      <br><br><br><br><br><br>
       <p>Hisobingiz yo‘qmi? <a href="register.html">Ro‘yxatdan o‘ting</a></p>
     </form>
   </div>
-  
-  <br>
-  <!-- Footer -->
+  <br><br><br>
+  <!--Footer qismi-->
   <footer>
-    <p>&copy; 2025 TopMaxsulotMarket. Barcha huquqlar himoyalangan.</p>
+    <p>&copy; 2024 TopMaxsulotMarket. Barcha huquqlar himoyalangan.</p> 
   </footer>
-
 </body>
 </html>
-
