--- a/savat.html
+++ b/savat.html
@@ -49,7 +49,7 @@
         
      
 
-        <button id="checkout-btn" class="w-full mt-4 px-4 py-3 bg-emerald-600 text-white rounded-lg font-medium hover:bg-emerald-700">To'lovga o'tish</button>
+        <button id="checkout-btn" class="w-full mt-4 px-4 py-3 bg-emerald-600 text-white rounded-lg font-medium hover:bg-emerald-700">BUYURTMA BERISH</button>
         <button id="clear-cart" class="w-full mt-2 px-4 py-2 border rounded-lg text-sm text-red-600 hover:bg-red-100">Savatni tozalash</button>
       </div>
     </aside>
@@ -94,3 +94,4 @@
   <script src="savat.js"></script> 
 </body>
 </html>
+
