--- a/savat.html
+++ b/savat.html
@@ -18,16 +18,16 @@
         <li><a href="index.html">🏠 Bosh sahifa</a></li>
         <li><a href="katalog.html">☰ Mahsulotlar katalogi</a></li>
         <li><a href="savat.html">🛒Savat</a></li>
-        <li><a href="login.html">👤Kirish</a></li>
       </ul>
     </nav>
   </header>
+  
+  <!-- MOBIL QURILMALAR UCHUN PASTKI NAVIGATSIYA -->
 
   <nav class="mobile-bottom-nav">
     <a href="index.html" class="nav-link"><span class="nav-icon">🏠</span><span class="nav-text">Bosh sahifa</span></a>
     <a href="katalog.html" class="nav-link"><span class="nav-icon">☰</span><span class="nav-text">Katalog</span></a>
     <a href="savat.html" class="nav-link active"><span class="nav-icon">🛒</span><span class="nav-text">Savat</span></a>
-    <a href="login.html" class="nav-link"><span class="nav-icon">👤</span><span class="nav-text">Kirish</span></a>
   </nav>
 
   <main class="max-w-6xl mx-auto p-4 mt-6 grid grid-cols-1 lg:grid-cols-3 gap-6">
@@ -49,7 +49,7 @@
         
      
 
-        <button id="checkout-btn" class="w-full mt-4 px-4 py-3 bg-emerald-600 text-white rounded-lg font-medium hover:bg-emerald-700">BUYURTMA BERISH</button>
+        <button id="checkout-btn" class="w-full mt-4 px-4 py-3 bg-emerald-600 text-white rounded-lg font-medium hover:bg-emerald-700">To'lovga o'tish</button>
         <button id="clear-cart" class="w-full mt-2 px-4 py-2 border rounded-lg text-sm text-red-600 hover:bg-red-100">Savatni tozalash</button>
       </div>
     </aside>
@@ -94,4 +94,3 @@
   <script src="savat.js"></script> 
 </body>
 </html>
-
