--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
 
           <div class="product-card">
-            <img src="https://www.doridarmon.uz/uploads/news/9043f59c5fa87d50d4d4906f4a71b364.jpg" alt="Smart soat">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQYRiajmfPPtcXaMTP56rvSbYGlHlzAo6_Ywg&s" alt="Smart soat">
             <h3>Poyabzallar</h3>
             <a href="poyabzallar.html" class="btm">Mahsulotlarga o'tish</a>
           </div>
@@ -261,3 +261,4 @@
 
 </body>
 </html>
+
